fix: fix articles on small screens

--- a/client/scss/core/_article.scss
+++ b/client/scss/core/_article.scss
@@ -4,7 +4,7 @@ article {
   justify-content: center;
 
   &.summary {
-    height: 50vh;
+    min-height: 50vh;
   }
 
   .meta {
